Structure rework and Block Model support